Fixed bug for print version of Confirmation page (seat number's alignment)
git-svn-id: https://svnmsq.epam.com/dlex-odc/BA/TDP%201.3/Prototype/XHTML-BMI@8445 75f4bb0a-67ed-7d4f-9889-1df49564f452

--- a/css/print-visual.css
+++ b/css/print-visual.css
@@ -23,3 +23,12 @@ a {
 .detailsSubBlockFareBreakdown .detailsTable TD {
 	border: 1px solid #bfb5bf;	
 }
+
+.passengerInfoBlock .details .seatsDescr td {
+	background: none;
+	padding-top: 0;
+}
+
+.passengerInfoBlock .details .seatsDescr div {
+	padding-top: 0;
+}
